<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_receita">

    <fragment
        android:id="@+id/nav_receita"
        android:name="br.com.rubiofinancas.ui.receita.ReceitaFragment"
        android:label="@string/menu_receita"
        tools:layout="@layout/fragment_receita" >
        <action
            android:id="@+id/action_nav_receita_to_cadastro_receita"
            app:destination="@id/cadastro_receita" />
    </fragment>

    <fragment
        android:id="@+id/nav_despesa"
        android:name="br.com.rubiofinancas.ui.despesa.DespesaFragment"
        android:label="@string/menu_despesa"
        tools:layout="@layout/fragment_despesa" >
        <action
            android:id="@+id/action_nav_despesa_to_cadastro_despesa"
            app:destination="@id/cadastro_despesa" />
    </fragment>


    <fragment
        android:id="@+id/cadastro_receita"
        android:name="br.com.rubiofinancas.ui.receita.CadastroReceitaFragment"
        tools:layout="@layout/fragment_cadastro_receita" >
        <argument
            android:name="receita"
            app:argType="br.com.rubiofinancas.ui.receita.ReceitaArgs"
            app:nullable="true"
            android:defaultValue="@null" />
        <argument
            android:name="id"
            app:argType="long"
            android:defaultValue="0L" />
        <action
            android:id="@+id/action_cadastro_receita_to_nav_receita"
            app:destination="@id/nav_receita" />

    </fragment>


    <fragment
        android:id="@+id/cadastro_despesa"
        android:name="br.com.rubiofinancas.ui.despesa.CadastroDespesaFragment"
        android:label="@string/menu_cadastro_despesa"
        tools:layout="@layout/fragment_cadastro_despesa" >

        <action
            android:id="@+id/action_cadastro_despesa_to_nav_despesa"
            app:destination="@id/nav_despesa" />
    </fragment>




</navigation>