<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.ui.despesa.CadastroDespesaFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/campo_item"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/item"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/format_list_bulleted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/campo_categoria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/categoria"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/filter_variant"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="@+id/campo_item"
        app:layout_constraintStart_toStartOf="@+id/campo_item"
        app:layout_constraintTop_toBottomOf="@+id/campo_item">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/categoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/campo_valor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/valor"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/cash"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="@+id/campo_categoria"
        app:layout_constraintStart_toStartOf="@+id/campo_categoria"
        app:layout_constraintTop_toBottomOf="@+id/campo_categoria">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/valor"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_pagamento"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/tipo_pagamento"
        app:layout_constraintEnd_toEndOf="@+id/campo_valor"
        app:layout_constraintStart_toStartOf="@+id/campo_valor"
        app:layout_constraintTop_toBottomOf="@+id/campo_valor"
        >

<com.google.android.material.textfield.MaterialAutoCompleteTextView
    android:id="@+id/pagamento"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout7"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/mes"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/calendar_month"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="@+id/input_pagamento"
        app:layout_constraintTop_toBottomOf="@+id/input_pagamento">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout10"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:hint="@string/ano"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@+id/input_pagamento"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/input_pagamento"
        app:startIconDrawable="@drawable/calendar_clock">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/cadastrar_despesa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cadastrar_despesa"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout10"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout7"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout7" />


</androidx.constraintlayout.widget.ConstraintLayout>