<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.ui.receita.CadastroReceitaFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/campo_item"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/item"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@+id/data_hoje_input"
        app:layout_constraintStart_toStartOf="@+id/data_hoje_input"
        app:layout_constraintTop_toBottomOf="@id/data_hoje_input"
        app:startIconDrawable="@drawable/format_list_bulleted">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/campo_categoria"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/categoria"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@+id/campo_item"
        app:layout_constraintStart_toStartOf="@+id/campo_item"
        app:layout_constraintTop_toBottomOf="@+id/campo_item"
        app:startIconDrawable="@drawable/filter_variant">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/categoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/campo_valor"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/valor"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@+id/campo_categoria"
        app:layout_constraintStart_toStartOf="@+id/campo_categoria"
        app:layout_constraintTop_toBottomOf="@+id/campo_categoria"
        app:startIconDrawable="@drawable/cash">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/valor"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout8"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="5dp"
        android:enabled="false"
        android:hint="@string/mes"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="@+id/campo_valor"
        app:layout_constraintTop_toBottomOf="@+id/campo_valor"
        app:startIconDrawable="@drawable/calendar_month">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout9"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:hint="@string/ano"
        app:layout_constraintEnd_toEndOf="@+id/campo_valor"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/campo_valor"
        app:startIconDrawable="@drawable/calendar_clock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/cadastrar_atualizar_receita"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/holo_green_dark"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout9"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout8"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout8" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/data_hoje_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:enabled="false"
        android:hint="@string/data_hoje"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/calendar_month">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/data_hoje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>