<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.receita.ReceitaFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        app:cardElevation="2dp"
        app:contentPadding="2dp"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/mes_corrente"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/maior_receita"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/maior_receita"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/mes_corrente"
                app:layout_constraintTop_toBottomOf="@+id/ano_corrente" />

            <TextView
                android:id="@+id/valor_maior_receita"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:gravity="end"
                android:textColor="@color/green"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/mes_corrente"
                app:layout_constraintStart_toEndOf="@+id/maior_receita"
                app:layout_constraintTop_toTopOf="@+id/maior_receita" />

            <TextView
                android:id="@+id/menor_receita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/menor_receita"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/maior_receita"
                app:layout_constraintTop_toBottomOf="@+id/maior_receita" />

            <TextView
                android:id="@+id/valor_menor_receita"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:gravity="end"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/valor_maior_receita"
                app:layout_constraintStart_toStartOf="@+id/valor_maior_receita"
                app:layout_constraintTop_toTopOf="@+id/menor_receita" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/valor_menor_receita"
                app:layout_constraintStart_toStartOf="@+id/mes_corrente"
                app:layout_constraintTop_toBottomOf="@+id/menor_receita" />

            <TextView
                android:id="@+id/media_receita"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/media_receita"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/mes_corrente"
                app:layout_constraintTop_toTopOf="@+id/view" />

            <TextView
                android:id="@+id/valor_media_receita"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="16dp"
                android:gravity="end"
                android:textColor="@color/green"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/valor_menor_receita"
                app:layout_constraintStart_toEndOf="@+id/media_receita"
                app:layout_constraintTop_toTopOf="@+id/media_receita" />

            <TextView
                android:id="@+id/ano_corrente"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/mes_corrente"
                app:layout_constraintStart_toStartOf="@+id/mes_corrente"
                app:layout_constraintTop_toBottomOf="@+id/mes_corrente" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/card_view">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"


                />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_plus_white" />






</androidx.constraintlayout.widget.ConstraintLayout>

